--- a/nettikirppis/templates/nettikirppis/item.html
+++ b/nettikirppis/templates/nettikirppis/item.html
@@ -4,6 +4,7 @@
 
 <p>Ilmoitus: {{item.name}}</p>
 <p>{{ item.description }}</p>
+<p>{{ item.price }}€</p>
 <ul>
     {% for comment in comments %}
     <li>
