Kuvat toimii, kuvien tallennus toimii käyttäjittäin, migraatiohistoria meni hajalle niin poistin.

--- a/nettikirppis/templates/nettikirppis/item.html
+++ b/nettikirppis/templates/nettikirppis/item.html
@@ -1,10 +1,14 @@
 {% extends 'nettikirppis/base.html' %}
 
 {% block content %}
+{% load static %}
 
 <p>Ilmoitus: {{item.name}}</p>
 <p>{{ item.description }}</p>
 <p>{{ item.price }}€</p>
+<div>
+    <img src="{{ item.image.url }}"></img>
+</div>
 <ul>
     {% for comment in comments %}
     <li>
