--- a/nettikirppis/templates/nettikirppis/new_item.html
+++ b/nettikirppis/templates/nettikirppis/new_item.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <p>Tee uusi myynti-ilmoitus:</p>
-<form action="{% url 'nettikirppis:new_item' %}" method="post">
+<form enctype="multipart/form-data" action="{% url 'nettikirppis:new_item' %}" method="post">
     {% csrf_token %}
     {{ form.as_div }}
     <button name="submit">Valmis</button>
