Lisätty omistajuus kommentille, korjattu uuden itemin lisäys sivu, käyttäjänimi näkyviin ylös, kun yrittää muokata toisen kommenttia saa nyt väliaikaisesti 404 errorin, tämä siis kesken.

--- a/nettikirppis/templates/nettikirppis/base.html
+++ b/nettikirppis/templates/nettikirppis/base.html
@@ -3,6 +3,7 @@
     <a href="{% url 'nettikirppis:items' %}">Tavarat</a>
 
     {% if user.is_authenticated %}
+        Hei, {{user.username}}.
     <a href="{% url 'nettikirppis:new_item' %}">Uusi myynti-ilmoitus</a>
     {% else %}
     <a href="{% url 'accounts:login' %}">Kirjaudu sisään</a>
