Mahdollisuus poistaa ja editoita omia ilmoituksia. Kommentin jättäjän nimi mukana kommentissa. Kommentissa myös 'Poista' nappi joka ei vielä tee mitään, on kesken.

--- a/nettikirppis/templates/nettikirppis/owner_items.html
+++ b/nettikirppis/templates/nettikirppis/owner_items.html
@@ -6,6 +6,7 @@
     {% for item in items %}
     <li>
         <a href="{% url 'nettikirppis:item' item.id %}">{{item}}</a>
+        <p><a href="{% url 'nettikirppis:edit_item' item.id %}">Muokkaa ilmoitusta</a></p>
     </li>
 
     {% empty %}
