--- a/nettikirppis/templates/nettikirppis/item.html
+++ b/nettikirppis/templates/nettikirppis/item.html
@@ -17,6 +17,7 @@
 <ul>
     {% for comment in comments %}
     <li>
+        <p>{{ comment.owner }}:</p>
         <p>{{ comment.date_added }}</p>
         <p>{{ comment.text }}</p>
         <p>
@@ -24,6 +25,9 @@
                 Muokkaa kommenttia
             </a>
         </p>
+    </li>
+    <li id="comment-{{ comment.id }}">
+        <button onclick="confirmDelete( commentId )" class="delete-button">Poista</button>
     </li>
 
     {% empty %}
