Lisätty navbar, lisätty bootstrap5

--- a/nettikirppis/templates/nettikirppis/base.html
+++ b/nettikirppis/templates/nettikirppis/base.html
@@ -1,3 +1,40 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Nettikirppis</title>
+
+        {% load django_bootstrap5 %}
+        {% bootstrap_css %}
+        {% bootstrap_javascript %}
+    </head>
+    <body>
+        <nav class="navbar navbar-expand-md navbar-light bg-light mb-4 border">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="{% url 'nettikirppis:index' %}">
+                    Nettikirppis
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarCollapse">
+                    <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'nettikirppis:items' %}">
+                                Ilmoitukset
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </body>
+</html>
+
+
+
 <p>
     <a href="{% url 'nettikirppis:index' %}">Nettikirppis</a>
     <a href="{% url 'nettikirppis:items' %}">Tavarat</a>
