--- a/nettikirppis/templates/nettikirppis/base.html
+++ b/nettikirppis/templates/nettikirppis/base.html
@@ -59,7 +59,14 @@
                 </div> <!-- Closes the collapsible parts of navbar-->
             </div> <!-- Closes navbar's containers-->
         </nav> <!-- End of navbar -->
-    {% block content %} {% endblock content %}
+        <main class="container">
+            <div class="pb-2 mb-2 border-bottom">
+                {% block page_header %} {% endblock page_header %}
+            </div>
+            <div>
+                {% block content %} {% endblock content %}
+            </div>
+        </main>
     </body>
 </html>
 
