--- a/nettikirppis/templates/nettikirppis/items.html
+++ b/nettikirppis/templates/nettikirppis/items.html
@@ -1,16 +1,21 @@
 {% extends 'nettikirppis/base.html' %}
 
-{% block content %}
-<p>Myynti-ilmoitukset</p>
-<ul>
-    {% for item in items %}
-    <li>
-        <a href="{% url 'nettikirppis:item' item.id %}">{{item}}</a>
-    </li>
+{% block page_header %}
+    <h1>Ilmoitukset</h1>
+{% endblock page_header %}
 
-    {% empty %}
-    <li>Ei myytäviä tavaroita.</li>
-    {% endfor %}
-</ul>
+{% block content %}
+
+    <ul class="list-group border-bottom pb-2 mb-4">
+        {% for item in items %}
+            <li class="list-group-item border-0">
+                <a href="{% url 'nettikirppis:item' item.id %}">
+                    {{ item }}
+                </a>
+            </li>
+        {% empty %}
+            <li class="list-group-item border-0">Ei vielä ilmoituksia.</li>
+        {% endfor %}
+    </ul>
 
 {% endblock content %}
