aloitettu item sivun tekoa

--- a/nettikirppis/templates/nettikirppis/item.html
+++ b/nettikirppis/templates/nettikirppis/item.html
@@ -1,5 +1,7 @@
 {% extends 'nettikirppis/base.html' %}
-
+{% block header_page %}
+    <h1>{{ item }}</h1>
+{% endblock header_page %}
 {% block content %}
 {% load static %}
 
