Tehty nappi omalle ilmoitus sivulle "lisää uusi ilmoitus", muita korjauksia

--- a/nettikirppis/templates/nettikirppis/base.html
+++ b/nettikirppis/templates/nettikirppis/base.html
@@ -19,6 +19,9 @@
                 margin-left: 30px;
                 margin-bottom: 5px;
             }
+            .valmis-button{
+                margin-top:15px;
+            }
         </style>
     </head>
     <body>
