--- a/nettikirppis/templates/nettikirppis/base.html
+++ b/nettikirppis/templates/nettikirppis/base.html
@@ -21,6 +21,14 @@
             }
             .valmis-button{
                 margin-top:15px;
+                border:none;
+                border-radius: 60px;
+                padding-top: 5px;
+                padding-left: 8px;
+                padding-right: 8px;
+                padding-bottom: 5px;
+                background-color: #0d6efd;
+                color: white;
             }
         </style>
     </head>
