Lisätty poista kommentti -nappi ja sivu. Poistettu vanha toimimaton.

--- a/nettikirppis/templates/nettikirppis/delete_comment.html
+++ b/nettikirppis/templates/nettikirppis/delete_comment.html
@@ -1,29 +1,13 @@
-<script>
-    function confirmDelete(commentId) {
-        const userConfirmed=confirm("Haluatko varmasti poistaa tämän kommentin?");
-        if (userConfirmed) {
-            fetch(`/delete_comment/${commentId}/`, {
-                method: 'POST',
-                headers: {
-                    'X-CSRFToken': '{{ csrf_token }}',
-                },
-            })
-            .then(response => response.json())
-            .then(data => {
-                if(data.success){
-                    const commentElement=document.getElementById(`comment-${commentId}`);
-                    if (commentElement) {
-                        commentElement.remove();
-                    }
-                    alert("Kommentti poistettu!");
-                } else {
-                    alert("Kommenttia ei poistettu");
-                }
-            })
-            .catch(error => {
-                console.error("Error:", error);
-                alert("Virhe tapahtui kommenttia poistaessa");
-            });
-        }
-    }
-</script>
+{% extends 'nettikirppis/base.html' %}
+
+{% block content %}
+
+    <h2>Haluatko varmasti poistaa tämän kommentin?</h2>
+    <p>Kommentti ilmotukseen: {{ item.name }}</p>
+
+    <form action="{% url 'nettikirppis:delete_comment' comment.id %}" method="post">
+        {% csrf_token %}
+        <button name="submit">Kyllä</button>
+    </form>
+
+{% endblock content %}
