--- a/nettikirppis/templates/nettikirppis/edit_comment.html
+++ b/nettikirppis/templates/nettikirppis/edit_comment.html
@@ -14,4 +14,5 @@
             Valmis
         </button>
     </form>
+    <a href="{% url 'nettikirppis:delete_comment' comment.id %}">Poista kommentti</a>
 {% endblock content %}
