Muokattu nappeja, korjattu muutama style

--- a/nettikirppis/templates/nettikirppis/delete_comment.html
+++ b/nettikirppis/templates/nettikirppis/delete_comment.html
@@ -7,7 +7,8 @@
 
     <form action="{% url 'nettikirppis:delete_comment' comment.id %}" method="post">
         {% csrf_token %}
-        <button name="submit">Kyllä</button>
+        <button name="submit" class="yes-button">Kyllä</button>
     </form>
 
 {% endblock content %}
+
