--- a/nettikirppis/templates/nettikirppis/base.html
+++ b/nettikirppis/templates/nettikirppis/base.html
@@ -18,6 +18,7 @@
                 padding: 10px 10px 10px;
                 margin-left: 30px;
                 margin-bottom: 5px;
+                margin-top: 8px;
             }
             .valmis-button{
                 margin-top:15px;
@@ -29,6 +30,17 @@
                 padding-bottom: 5px;
                 background-color: #0d6efd;
                 color: white;
+            }
+            .yes-button{
+                background-color: #0d6efd;
+                color: white;
+                margin-top:15px;
+                border:none;
+                border-radius: 60px;
+                padding-top: 5px;
+                padding-left: 8px;
+                padding-right: 8px;
+                padding-bottom: 5px;
             }
         </style>
     </head>
